--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,10 +10,6 @@ h2 {
     max-width: 1000px;
   
     /* flexbox */
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -50,5 +46,5 @@ h2 {
   }
   
   a:hover {
-    background-color: black;
+    background-color: #000;
   }
